--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="edittext_textsize_login">20sp</dimen>
+    <dimen name="paddin_horizontal_login">32dp</dimen>
 </resources>
